--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,4 +1,4 @@
-<header class="header">
+<header id="header" class="header">
   <div class="container header__container">
     <a href="./index.html" class="header__logo">
       <svg width="50" height="50" class="header__logo--icon">
@@ -27,11 +27,11 @@
           </svg>
         </button>
         <ul class="header__nav">
-          <li><a class="header__list" href="">Home</a></li>
-          <li><a class="header__list" href="">About us</a></li>
-          <li><a class="header__list" href="#how">How it&#39;s made?</a></li>
-          <li><a class="header__list" href="">Our products</a></li>
-          <li><a class="header__list" href="">Contact</a></li>
+          <li><a class="header__list" href="#header">Home</a></li>
+          <li><a class="header__list" href="#reviews">About us</a></li>
+          <li><a class="header__list" href="#about">How it&#39;s made?</a></li>
+          <li><a class="header__list" href="#products">Our products</a></li>
+          <li><a class="header__list" href="#contact">Contact</a></li>
         </ul>
       </nav>
     </div>
