--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,4 +1,4 @@
-<section class="contacts">
+<section id="contact" class="contacts">
   <div class="container">
     <h2 class="contacts__title visually-hidden">Our contacts</h2>
     <ul class="contacts__list">
