--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,5 +1,5 @@
-<section id="contact" class="contacts">
-  <div class="container">
+<section class="contacts">
+  <div id="contact" class="container">
     <h2 class="contacts__title visually-hidden">Our contacts</h2>
     <ul class="contacts__list">
       <li class="contacts__item">
