--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,5 +1,5 @@
-<section class="about" id="how">
-  <div class="container about__container">
+<section class="about">
+  <div id="about" class="container about__container">
     <label class="about__lable">tradition and love</label>
     <h2 class="about__title">how it’s made?</h2>
     <div class="about__content">
