--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,5 +1,5 @@
 <section class="products">
-  <div class="container">
+  <div id="products" class="container">
     <p class="products__label">100&#37; NATURAL</p>
     <h2 class="products__title">PRODUCTS</h2>
     <ul class="products-list">
