--- a/src/partials/customer-reviews.html
+++ b/src/partials/customer-reviews.html
@@ -101,6 +101,7 @@
     <script>
       var swiper = new Swiper('.mySwiper', {
         spaceBetween: 30,
+        // effect: 'cube',
         centeredSlides: true,
         autoplay: {
           delay: 2500,
