--- a/src/sass/components/_mobile-menu.scss
+++ b/src/sass/components/_mobile-menu.scss
@@ -51,6 +51,7 @@
   font-size: 14px;
   line-height: 1.28;
   color: var(--primary-white);
+  @include animation;
 
   padding-top: 10px;
   padding-bottom: 10px;
@@ -62,9 +63,6 @@
     line-height: 21px;
     margin-right: 30px;
   }
-  // &:not(:last-child) {
-  //   margin-right: 30px;
-  // }
   &:hover,
   &:focus {
     color: var(--accent);
@@ -125,9 +123,9 @@
   color: var(--primary-text);
   margin-top: 60px;
   margin-bottom: 20px;
-  &:hover {
-    background-color: var(--hover-color);
-  }
+  @include animation;
+
+  &:hover,
   &:focus {
     background-color: var(--hover-color);
   }
@@ -136,6 +134,7 @@
   }
 }
 .header__nav--button {
+  @include animation;
   @media screen and (max-width: 767px) {
     display: none;
   }
@@ -164,9 +163,7 @@
     top: 42px;
     right: 116px;
   }
-  &:hover {
-    background-color: var(--hover-color);
-  }
+  &:hover,
   &:focus {
     background-color: var(--hover-color);
   }
