--- a/src/sass/layouts/_contacts.scss
+++ b/src/sass/layouts/_contacts.scss
@@ -44,16 +44,11 @@
     max-width: 220px;
     padding: 43px 20px;
     margin: 10px;
-    // margin: 0 auto;
     font-size: 12px;
     border-radius: 24px;
     background-color: var(--primary-white);
     box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-    // &:not(:last-child) {
-    //   margin-bottom: 20px;
-    // }
+    @include animation;
     &:hover,
     &:focus {
       box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.3);
@@ -62,19 +57,12 @@
       font-size: 14px;
       padding: 50px 32px;
       margin: 10px;
-      // &:not(:last-child) {
-      //   margin-bottom: 0;
-      //   margin-right: 20px;
-      // }
     }
     @media screen and (min-width: 1280px) {
       max-width: 330px;
       font-size: 16px;
       padding: 51px 43px 62px;
       margin: 15px;
-      // &:not(:last-child) {
-      //   margin-right: 30px;
-      // }
     }
   }
   &__name {
@@ -186,6 +174,7 @@
     text-decoration: none;
     line-height: 1.5;
     color: var(--secondary-text);
+    @include animation;
     &:hover,
     &:focus {
       color: var(--primary-black);
@@ -225,6 +214,7 @@
     background-color: var(--primary-white);
     border-radius: 22px;
     border: 0;
+    @include animation;
     &:hover,
     &:focus {
       background-color: var(--hover-color);
