--- a/src/sass/utils/_mixins.scss
+++ b/src/sass/utils/_mixins.scss
@@ -21,3 +21,8 @@
     @content;
   }
 }
+@mixin animation {
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  @content;
+}
