--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,5 +1,6 @@
 <header id="header" class="header">
   <div class="container header__container">
+    <h1 class="visually-hidden">icecream</h1>
     <a href="./index.html" class="header__logo">
       <svg width="50" height="50" class="header__logo--icon">
         <use href="./images/icons.svg#icon-ice-cream"></use>
