--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -10,7 +10,7 @@
     url(../images/tablet/Ellipse-768@1x.png);
   background-size: 170px, 345px;
   background-repeat: no-repeat;
-  background-position: bottom 0px right 32px, bottom 75px right -50px;
+  background-position: bottom 0px left 117px, bottom 75px left 35px;
   height: 502px;
   @media screen and (min-device-pixel-ratio: 2),
     screen and (min-resolution: 192dpi),
