--- a/src/sass/components/_mobile-menu.scss
+++ b/src/sass/components/_mobile-menu.scss
@@ -73,7 +73,8 @@
 }
 
 .header__button {
-  position: absolute;
+  position: fixed;
+
   z-index: 3;
   top: 15px;
   right: 20px;
@@ -90,6 +91,7 @@
     display: none;
   }
   &.is-open {
+    position: absolute;
     @media screen and (min-width: 768px) {
       top: 52px;
       right: 225px;
